--- a/krh/quellen.html
+++ b/krh/quellen.html
@@ -1,5 +1,5 @@
 <style>
-    a:after {
+    li a:after {
         content: attr(href);
     }
 </style>
@@ -18,3 +18,5 @@
     <li><a href="https://www.welt.de/print/die_welt/hamburg/article115419955/Hommage-an-den-Kuenstler-K-R-H-Sonderborg.html"></a></li>
     <li><a href="https://maulberger.de/inc/publikationen/2013/K_R_H_Sonderborg/web/flipviewerxpress.html"></a></li>
 </ul>
+<br>
+<a href="index.html">Zurück</a>
